--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
-    <title>Hello, world!</title>
+    <title>Paycheck Calculator</title>
   </head>
   <body>
     <!-- <h1>Hello, world!</h1> -->
@@ -27,7 +27,7 @@
           <h1 class="text-center">Paycheck Calculator</h1>
 
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5" id="border">
           <div class="row ml-4">
             <div class="col-md-12">
               <div class="row">
@@ -41,22 +41,23 @@
                   <tbody class="border">
                     <tr>
                       <td>Wages to convert:</td>
-                      <td><input type="text" class="form-control offset-3" id="wagesToConvert" value="60000"></td>
+                      <td><input type="text" class="form-control offset-3 " id="wagesToConvert" value="60000"></td>
                     </tr>
                     <tr>
                       <td>Above wages are per:</td>
                       <td>
-                        <select class="custom-select offset-3" name="time"
+                        <select class="custom-select offset-3 " name="time"
                           id="time">
-                          <option value="Houre">Houre</option>
-                          <option value="Day">Day</option>
-                          <option value="Week">Week</option>
-                          <option value="Bi-Week">Bi-Week</option>
-                          <option value="Semi-Monthly">Semi-Monthly</option>
+                          <option value="Hourly">Hour</option>
+                          <option value="Daily">Day</option>
+                          <option value="Weekly">Week</option>
+                          <option value="BiWeekly">Bi-Week</option>
+                          <option value="semiMonthly">Semi-Monthly</option>
                           <option value="Monthly">Monthly</option>
-                          <option value="Quater">Quater</option>
-                          <option value="Semi-Annually">Semi-Annually</option>
-                          <option value="Year" selected>Year</option>
+                          <option value="biMonthly">Bi-Monthly</option>
+                          <option value="Quarterly">Quater</option>
+                          <option value="semiAnnually">Semi-Annually</option>
+                          <option value="year" selected>Year</option>
                         </select>
                       </td>
                     </tr>
@@ -74,15 +75,15 @@
                   <tbody class="border">
                     <tr>
                       <td>Hours worked per day:</td>
-                      <td><input type="text" class="form-control offset-3" id="hoursWorkedPerDay" value="8"></td>
+                      <td><input type="text" class="form-control offset-3 " id="hoursWorkedPerDay" value="8"></td>
                     </tr>
                     <tr>
                       <td>Days worked per week:</td>
-                      <td><input type="text" class="form-control offset-3" id="daysWorkedPerWeek" value="5"></td>
+                      <td><input type="text" class="form-control offset-3 " id="daysWorkedPerWeek" value="5"></td>
                     </tr>
                     <tr>
                       <td>Weeks worked per year:</td>
-                      <td><input type="text" class="form-control offset-3" id="weeksWorkedPerYear" value="50"></td>
+                      <td><input type="text" class="form-control offset-3 " id="weeksWorkedPerYear" value="50"></td>
                     </tr>
                   </tbody>
                 </table>
@@ -99,25 +100,26 @@
                     <tr>
                       <td>Above wages are:</td>
                       <td>
-                        <select class="custom-select offset-3" name="tax"
+                        <select class="custom-select offset-3 " name="tax"
                           id="tax">
-                          <option value="Houre">Untexed</option>
-                          <option value="Day" selected>Before texes</option>
-                          <option value="Week">After texes</option>
+                          <option value="unTaxed">Untaxed</option>
+                          <option value="beforeTaxes" selected>Before Taxes</option>
+                          <option value="afterTaxes">After Taxes</option>
                         </select>
                       </td>
                     </tr>
                     <tr>
                       <td>Your effective tax rate (%):</td>
-                      <td id="effactiveTex"><input type="text"
-                          class="form-control" id="effectiveTax" value="25"></td>
+                      <td class="effectiveTax">
+                        <input type="text"class="form-control offset-3 " id="effectiveTaxInput" value="25">
+                      </td>
                     </tr>
                     <tr>
                       <td colspan="2" class="text-center"><button class="btn
-                          btn-success" id="convertbtn" onclick="convertWages()"> <i
+                          btn-success" id="convertBtn" onclick="convertWages()"> <i
                             class="fa-solid fa-circle-check d-none"
                             id="convert"></i> Convert Wages</button> <button
-                          class="btn btn-success" id="clearbtn"
+                          class="btn btn-success" id="clearBtn"
                           onclick="clearall()"><i class="fa-solid fa-circle-check"
                             id="clear"></i> Clear</button></td>
                     </tr>
@@ -128,85 +130,83 @@
           </div>
         </div>
         <div class="col-md-1"></div>
-        <div class="col-md-5">
-          <div class="row">
-            <table class="table table-striped table-borderless">
-              <thead>
-                <tr>
-                  <th scope="col">Converted</th>
-                  <th scope="col" class="text-center">Untaxed</th>
-                  <th scope="col" class="text-center">Taxed</th>
-                </tr>
-              </thead>
-              <tbody class="border">
-                <tr>
-                  <td>Hourly:</td>
-                  <td><input type="text" class="form-control offset-3" id="untaxedHourly"></td>
-                  <td><input type="text" class="form-control offset-3" id="taxedHourly"></td>
-                </tr>
-                <tr>
-                  <td>Daily:</td>
-                  <td><input type="text" class="form-control offset-3" id="untaxedDaily"></td>
-                  <td><input type="text" class="form-control offset-3" id="taxedDaily"></td>
-                </tr>
-                <tr>
-                  <td>Weekly:</td>
-                  <td><input type="text" class="form-control offset-3" id="untaxedWeekly"></td>
-                  <td><input type="text" class="form-control offset-3" id="taxedWeekly"></td>
-                </tr>
-                <tr>
-                  <td>Hours worked per week:</td>
-                  <td id="hoursWorkedPerWeek" colspan="2"><input type="text"
-                      class="form-control" id="hoursWorkedPerWeek1"></td>
-                </tr>
-                <tr>
-                  <td>Bi-Weekly:</td>
-                  <td><input type="text" class="form-control offset-3" id="untaxedBi_Weekly"></td>
-                  <td><input type="text" class="form-control offset-3" id="taxedBi_Weekly"></td>
-                </tr>
-                <tr>
-                  <td>Semi-Monthly:</td>
-                  <td><input type="text" class="form-control offset-3" id="untaxedSemi-Monthly"></td>
-                  <td><input type="text" class="form-control offset-3" id="taxedSemi-Monthly"></td>
-                </tr>
-                <tr>
-                  <td>Monthly:</td>
-                  <td><input type="text" class="form-control offset-3" id="untaxedMonthly"></td>
-                  <td><input type="text" class="form-control offset-3" id="taxedMonthly"></td>
-                </tr>
-                <tr>
-                  <td>Hours worked per month:</td>
-                  <td id="hoursWorkedPerWeek" colspan="2"><input type="text"
-                      class="form-control" id="hoursWorkedPerMonth"></td>
-                </tr>
-                <tr>
-                  <td>Bi-Monthly:</td>
-                  <td><input type="text" class="form-control offset-3" id="untaxedBi-Monthly"></td>
-                  <td><input type="text" class="form-control offset-3"  id="taxedBi-Monthly"></td>
-                </tr>
-                <tr>
-                  <td>Quarterly:</td>
-                  <td><input type="text" class="form-control offset-3"  id="untaxedQuarterly"></td>
-                  <td><input type="text" class="form-control offset-3" id="taxedQuarterly"></td>
-                </tr>
-                <tr>
-                  <td>Semi-Annually:</td>
-                  <td><input type="text" class="form-control offset-3" id="untaxedSemi_Annually"></td>
-                  <td><input type="text" class="form-control offset-3"  id="taxedSemi_Annually"></td>
-                </tr>
-                <tr>
-                  <td>Annually:</td>
-                  <td><input type="text" class="form-control offset-3" id="untaxedAnnually"></td>
-                  <td><input type="text" class="form-control offset-3" id="taxedAnnually"></td>
-                </tr>
-                <tr>
-                  <td>Hours worked per year:</td>
-                  <td id="hoursWorkedPerWeek" colspan="2"><input type="text"
-                      class="form-control" id="hoursWorkedPerYear"></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+        <div class="col-md-5 table-responsive">
+          <table class="table table-striped table-borderless">
+            <thead>
+              <tr>
+                <th scope="col">Converted</th>
+                <th scope="col" class="text-center">Untaxed</th>
+                <th scope="col" class="text-center">Taxed</th>
+              </tr>
+            </thead>
+            <tbody class="border">
+              <tr>
+                <td>Hourly:</td>
+                <td><input type="text" class="form-control offset-3 " id="untaxedHourly"></td>
+                <td><input type="text" class="form-control offset-3 " id="taxedHourly"></td>
+              </tr>
+              <tr>
+                <td>Daily:</td>
+                <td><input type="text" class="form-control offset-3 " id="untaxedDaily"></td>
+                <td><input type="text" class="form-control offset-3 " id="taxedDaily"></td>
+              </tr>
+              <tr>
+                <td>Weekly:</td>
+                <td><input type="text" class="form-control offset-3 " id="untaxedWeekly"></td>
+                <td><input type="text" class="form-control offset-3 " id="taxedWeekly"></td>
+              </tr>
+              <tr>
+                <td>Hours worked per week:</td>
+                <td colspan="2"><input type="text"
+                    class="form-control offset-2" id="hoursWorkedPerWeek1"></td>
+              </tr>
+              <tr>
+                <td>Bi-Weekly:</td>
+                <td><input type="text" class="form-control offset-3 " id="untaxedBiWeekly"></td>
+                <td><input type="text" class="form-control offset-3 " id="taxedBiWeekly"></td>
+              </tr>
+              <tr>
+                <td>Semi-Monthly:</td>
+                <td><input type="text" class="form-control offset-3 " id="untaxedSemiMonthly"></td>
+                <td><input type="text" class="form-control offset-3 " id="taxedSemiMonthly"></td>
+              </tr>
+              <tr>
+                <td>Monthly:</td>
+                <td><input type="text" class="form-control offset-3 " id="untaxedMonthly"></td>
+                <td><input type="text" class="form-control offset-3 " id="taxedMonthly"></td>
+              </tr>
+              <tr>
+                <td>Hours worked per month:</td>
+                <td colspan="2"><input type="text"
+                    class="form-control offset-1" id="hoursWorkedPerMonth"></td>
+              </tr>
+              <tr>
+                <td>Bi-Monthly:</td>
+                <td><input type="text" class="form-control offset-3" id="untaxedBiMonthly"></td>
+                <td><input type="text" class="form-control offset-3"  id="taxedBiMonthly"></td>
+              </tr>
+              <tr>
+                <td>Quarterly:</td>
+                <td><input type="text" class="form-control offset-3"  id="untaxedQuarterly"></td>
+                <td><input type="text" class="form-control offset-3" id="taxedQuarterly"></td>
+              </tr>
+              <tr>
+                <td>Semi-Annually:</td>
+                <td><input type="text" class="form-control offset-3" id="untaxedSemiAnnually"></td>
+                <td><input type="text" class="form-control offset-3"  id="taxedSemiAnnually"></td>
+              </tr>
+              <tr>
+                <td>Annually:</td>
+                <td><input type="text" class="form-control offset-3" id="untaxedAnnually"></td>
+                <td><input type="text" class="form-control offset-3" id="taxedAnnually"></td>
+              </tr>
+              <tr>
+                <td>Hours worked per year:</td>
+                <td  colspan="2"><input type="text"
+                    class="form-control" id="hoursWorkedPerYear"></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
         <div class="col-md-1"></div>
       </div>
@@ -219,14 +219,14 @@
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" 
+    integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-      crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
